2003-11-14  graydon hoare  <graydon@pobox.com>

	* database.cc, database.hh (reverse_queue): New class.
	(compute_older_version): New functions.
	(get_manifest_delta): Remove.
	* network.cc, network.hh (queue_blob_for_network): Remove.
	* packet.cc, packet.hh (queueing_packet_writer): Change UI,
	write to queue directly, accept optional<reverse_queue>.
	* cert.cc (write_paths_recursive): Rewrite to use constant
	memory.
	* commands.cc (queue, queue_edge_for_target_ancestor):
	Install optional<reverse_queue> in qpw.
	* monotone.texi (Transmitting Changes): Change UI output.

2003-11-13  graydon hoare  <graydon@pobox.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Require 1.7.1
	* commands.cc (addtree): Wrap in transaction guard.
	* database.cc, database.hh (manifest_delta_exists): Add.
	(get_manifest_delta): Add.
	* cert.cc (write_paths_recursive): Use partial deltas.
	* manifest.cc, manifest.hh (read_manifest_map): New variant.
	* patch_set.cc, patch_set.hh (patch_set): Add map_new, map_old
	fields.
	(manifests_to_patch_set) Store new field.
	(patch_set_to_packets) Don't read manifest versions from db.
	* std_hooks.lua (ignore_file): ignore .a, .so, .lo, .la, ~ files.
	* tests/t_cvsimport.at: New test.
	* testsuite.at: Call it.

2003-11-10  graydon hoare  <graydon@pobox.com>

	* commands.cc (find_oldest_ancestors): New function.
	(queue): New "addtree" subcommand.
	* monotone.texi: Document it.
	* monotone.1: Document it.

2003-11-10  graydon hoare  <graydon@pobox.com>

	* file_io.cc (walk_tree_recursive): Ignore MT/

2003-11-09  graydon hoare  <graydon@pobox.com>

	* database.cc (dump, load): Implement.
	* commands.cc (db): Call db.dump, load.
	* cycle_detector.hh: Skip when no in-edge on src.
	* monotone.texi: Document dump and load, add some 
	special sections.
	* monotone.1: Mention dump and load.

2003-11-09  graydon hoare  <graydon@pobox.com>

	* rcs_file.hh (rcs_symbol): New structure.
	* rcs_file.cc (symbol): New rule.