@@ -45,6 +45,9 @@ base version, or \fI[id]\fP if given.
 Create a custom cert for a file or manifest. Reads cert value
 from stdin if no value given on command line.
 .TP
+\fBvcheck\fP \fI(create|check) [id]\fP
+Produce or check \fBvcheck\fP certs for the given manifest \fI[id]\fP.
+.TP
 \fBgenkey\fP \fI<keyid>\fP
 Generate an RSA key-pair and store it in the database.
 .TP
